--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Hi  i am learning frontend web development
         <p>This is working the read of frontend development</p>
         <p> i learn web development form coursea</p>
-        <!-- <p></p> -->
+        <p>this tutorial is react js</p>
     </h1>
 </body>
 </html>
